Kubernetes/network-policies/egress-allow-app-to-specific-port.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-allow-ubuntu-to-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginx
