Kubernetes/network-policies/egress-allow-coredns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-allow-to-coredns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 9153
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
