Kubernetes/network-policies/ingress-allow-app-to-specific-port.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-ubuntu-to-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress  
  ingress:
  - ports:
    - port: 80
    from:
    - podSelector:
        matchLabels:
          app: ubuntu
